// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`link > --no-checks (offline write) > fails when branch is missing 1`] = `""`;

exports[`link > --no-checks (offline write) > fails when org-id or project-id is missing 1`] = `""`;

exports[`link > --no-checks (offline write) > writes org+project+branch when a branch is given 1`] = `
"Linked <TMP>/nochecks_branch/.neon:
  orgId:     org-anything
  projectId: ghost-project
  branch:    br-anything

Written offline (--no-checks): nothing was verified.

"
`;

exports[`link > --no-checks (offline write) > writes org+project+branch when a branch is given 2`] = `
"{
  "orgId": "org-anything",
  "projectId": "ghost-project",
  "branch": "br-anything"
}"
`;

exports[`link > --no-checks (offline write) > writes org+project+branch with no API verification 1`] = `
"Linked <TMP>/nochecks_basic/.neon:
  orgId:     org-anything
  projectId: ghost-project
  branch:    main

Written offline (--no-checks): nothing was verified.

"
`;

exports[`link > --no-checks (offline write) > writes org+project+branch with no API verification 2`] = `
"{
  "orgId": "org-anything",
  "projectId": "ghost-project",
  "branch": "main"
}"
`;

exports[`link > gitignore scaffolding > appends .neon to an existing .gitignore without duplicating 1`] = `
"Linked <TMP>/gi_appends/.neon:
  projectId: test
  branch:    main

"
`;

exports[`link > gitignore scaffolding > appends .neon to an existing .gitignore without duplicating 2`] = `
"Linked <TMP>/gi_appends/.neon:
  projectId: test
  branch:    main

"
`;

exports[`link > gitignore scaffolding > creates a .gitignore listing .neon next to the context file 1`] = `
"Linked <TMP>/gi_creates/.neon:
  projectId: test
  branch:    main

"
`;

exports[`link > gitignore scaffolding > set-context also scaffolds .gitignore via the shared applyContext 1`] = `""`;

exports[`link > input verification > --org-id that does not match the project fails with a mismatch error 1`] = `""`;

exports[`link > input verification > branch names on later list pages still resolve 1`] = `
"Linked <TMP>/verify_paged_branch/.neon:
  orgId:     org-7
  projectId: proj-paged-branches
  branch:    page-two

"
`;

exports[`link > input verification > unknown --project-id fails with a clear error 1`] = `""`;

exports[`link > non-interactive flag mode > conflicting inputs (--project-id with --project-name) fails 1`] = `""`;

exports[`link > non-interactive flag mode > conflicting inputs (--project-name with --branch-id) fails 1`] = `""`;

exports[`link > non-interactive flag mode > link --branch-id pins the branch in an existing project 1`] = `
"Linked <TMP>/flag_branch/.neon:
  projectId: test
  branch:    main

"
`;

exports[`link > non-interactive flag mode > link --branch-id pins the branch in an existing project 2`] = `
"{
  "projectId": "test",
  "branch": "main"
}"
`;

exports[`link > non-interactive flag mode > link --clear empties the context file 1`] = `
"Cleared <TMP>/flag_clear/.neon. The directory is no longer linked to a Neon org/project/branch.
"
`;

exports[`link > non-interactive flag mode > link --clear empties the context file 2`] = `"{}"`;

exports[`link > non-interactive flag mode > link --params JSON behaves like flags 1`] = `
"Linked <TMP>/flag_params/.neon:
  projectId: test
  branch:    main

"
`;

exports[`link > non-interactive flag mode > link --params JSON behaves like flags 2`] = `
"{
  "projectId": "test",
  "branch": "main"
}"
`;

exports[`link > non-interactive flag mode > link --project-id -y on a personal project omits orgId and pins the default branch 1`] = `
"Linked <TMP>/flag_existing/.neon:
  projectId: test
  branch:    main

"
`;

exports[`link > non-interactive flag mode > link --project-id -y on a personal project omits orgId and pins the default branch 2`] = `
"{
  "projectId": "test",
  "branch": "main"
}"
`;

exports[`link > non-interactive flag mode > link --project-id -y pins the default branch, not the first listed 1`] = `
"Linked <TMP>/flag_yes_default/.neon:
  orgId:     org-7
  projectId: proj-in-org
  branch:    main

"
`;

exports[`link > non-interactive flag mode > link --project-id -y pins the default branch, not the first listed 2`] = `
"{
  "orgId": "org-7",
  "projectId": "proj-in-org",
  "branch": "main"
}"
`;

exports[`link > non-interactive flag mode > link --project-id alone infers the org from the project 1`] = `
"Linked <TMP>/flag_infer_org/.neon:
  orgId:     org-7
  projectId: proj-in-org
  branch:    main

"
`;

exports[`link > non-interactive flag mode > link --project-id alone infers the org from the project 2`] = `
"{
  "orgId": "org-7",
  "projectId": "proj-in-org",
  "branch": "main"
}"
`;

exports[`link > non-interactive flag mode > link --project-id pins the only branch 1`] = `
"Linked <TMP>/flag_one_branch/.neon:
  orgId:     org-7
  projectId: proj-one-branch
  branch:    main

"
`;

exports[`link > non-interactive flag mode > link --project-id pins the only branch 2`] = `
"{
  "orgId": "org-7",
  "projectId": "proj-one-branch",
  "branch": "main"
}"
`;

exports[`link > non-interactive flag mode > link creates a new project and writes .neon 1`] = `
"Created project new-project-789012 ("test_project").
Linked <TMP>/flag_create/.neon:
  orgId:     org-2
  projectId: new-project-789012
  branch:    test_branch

"
`;

exports[`link > non-interactive flag mode > link creates a new project and writes .neon 2`] = `
"{
  "orgId": "org-2",
  "projectId": "new-project-789012",
  "branch": "test_branch"
}"
`;

exports[`link > non-interactive flag mode > re-linking the same project keeps the already-pinned branch 1`] = `
"Linked <TMP>/flag_keep_branch/.neon:
  projectId: test
  branch:    test_branch

"
`;

exports[`link > non-interactive flag mode > re-linking the same project keeps the already-pinned branch 2`] = `
"{
  "projectId": "test",
  "branch": "test_branch"
}"
`;

exports[`link > non-interactive flag mode > re-linking the same project with -y keeps the already-pinned branch 1`] = `
"Linked <TMP>/flag_keep_branch_yes/.neon:
  projectId: test
  branch:    test_branch

"
`;

exports[`link > non-interactive flag mode > re-linking the same project with -y keeps the already-pinned branch 2`] = `
"{
  "projectId": "test",
  "branch": "test_branch"
}"
`;

exports[`link > org-scoped API key behavior > links an existing project when org listing is forbidden 1`] = `
"Linked <TMP>/orgkey_project/.neon:
  orgId:     org-detected-99887766
  projectId: detected-project-12345
  branch:    main

"
`;

exports[`link > org-scoped API key behavior > links an existing project when org listing is forbidden 2`] = `
"{
  "orgId": "org-detected-99887766",
  "projectId": "detected-project-12345",
  "branch": "main"
}"
`;

exports[`link > overwrites an existing .neon when re-linking non-interactively 1`] = `
"Linked <TMP>/overwrite/.neon:
  projectId: test
  branch:    main

"
`;

exports[`link > overwrites an existing .neon when re-linking non-interactively 2`] = `
"{
  "projectId": "test",
  "branch": "main"
}"
`;
